banner section complete

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="container mx-auto py-5 bg-white flex justify-between items-center flex-col gap-3 lg:flex-row">
     <h1 class="font-bold font-one text-3xl">MohaiMinur</h1>
     <div>
-        <ul class="flex gap-5 font-semibold">
+        <ul class="flex gap-5 font-semibold font-one">
             <li><a href="#">Home</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Service</a></li>
@@ -48,6 +48,20 @@
 
 <!-- banner section start -->
 
+<div class="h-screen bg-gray-50 bg-[url('images/banner.jpg')] bg-cover text-white font-one text-2xl tracking-wide px-5">
+    <div class="container mx-auto w-full h-full text-left flex items-center">     
+            <div class="w-2/3 lg:w-1/2">
+                <p>Moive production studio</p>
+                <h1 class="text-5xl lg:text-8xl">Flims made to <br> <span class="text-yellow">Perfection</span></h1>
+                <p class="font-two text-sm font-light mb-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi debitis magni illum veniam nisi ut itaque nam, aspernatur explicabo commodi.</p>
+                <button class="py-2 px-5 border border-white rounded-md">Discover more</button>
+            </div>
+    </div>
+
+</div>
+
+
+<!-- About us section start -->
 
 
 
