about section design complete

--- a/index.html
+++ b/index.html
@@ -62,7 +62,41 @@
 
 
 <!-- About us section start -->
+<div class="container mx-auto h-fit my-20 p-10 border border-black">
+    <div class="flex gap-10">
+        <div class="w-full">
+            <img class="w-auto rounded-sm" src="images/camera-man.jpg" alt="camera man">
+            <p class="bg-white px-10 py-5 rounded-md w-4/5 text-center mx-auto -mt-8 shadow-md font-one text-2xl">23 years of experience</p>
+        </div>
+        <div>
+            <h1 class="font-one">About us</h1>
+            <h1 class="font-one text-6xl my-3">Fliming experience <br> just got better</h1>
+            <p class="text-gray-500 mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores consequuntur nulla architecto incidunt et necessitatibus hic quisquam deserunt, unde corrupti, recusandae commodi nemo repudiandae eveniet facilis harum alias quam magni.</p>
+            <button class="py-2 px-5 border border-black rounded-md">Discover more</button>
+        </div>
+    </div>
 
+    <div class="my-5 flex gap-20">
+      <div>
+        <hr class="border border-black my-3">
+        <h1 class="text-2xl font-bold font-one">Our vision</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores praesentium repudiandae, repellat assumenda itaque? Eveniet saepe culpa delectus corporis quasi. Dolores totam quae cupiditate, veritatis sapiente cumque? Hic, voluptates.</p>
+
+      </div>
+      <div>
+        <hr class="border border-black my-3">
+        <h1 class="text-2xl font-bold font-one">Our vision</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores praesentium repudiandae, repellat assumenda itaque? Eveniet saepe culpa delectus corporis quasi. Dolores totam quae cupiditate, veritatis sapiente cumque? Hic, voluptates.</p>
+
+      </div>
+      <div>
+        <hr class="border border-black my-3">
+        <h1 class="text-2xl font-bold font-one">Our vision</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde maiores praesentium repudiandae, repellat assumenda itaque? Eveniet saepe culpa delectus corporis quasi. Dolores totam quae cupiditate, veritatis sapiente cumque? Hic, voluptates.</p>
+
+      </div>
+    </div>
+</div>
 
 
 
