what we offer section complete

--- a/index.html
+++ b/index.html
@@ -120,6 +120,60 @@
   </div>
 </div>
 
+<!-- service section start -->
+<div class="container my-20 mx-auto text-center font-one">
+  <p class="font-two">service</p>
+  <h1 class="text-4xl my-3">What we offer</h1>
+
+  <div class="grid grid-cols-1 lg:grid-cols-4 gap-10 mt-10 mb-10">
+
+    <div class="border border-black p-10 rounded-sm">
+      <img class="w-10 mx-auto my-4" src="images/icons/camera.png" alt="">
+      <h1 class="text-2xl">Movies director</h1>
+      <p class="font-two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, dolorum.</p>
+    </div>
+    <div class="border border-black p-10 rounded-sm">
+      <img class="w-10 mx-auto my-4" src="images/icons/3d-glasss.png" alt="">
+      <h1 class="text-2xl">3D Moives</h1>
+      <p class="font-two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, dolorum.</p>
+    </div>
+    <div class="border border-black p-10 rounded-sm">
+      <img class="w-10 mx-auto my-4" src="images/icons/director-chair.png" alt="">
+      <h1 class="text-2xl">flims maker</h1>
+      <p class="font-two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, dolorum.</p>
+    </div>
+    <div class="border border-black p-10 rounded-sm">
+      <img class="w-10 mx-auto my-4" src="images/icons/film.png" alt="">
+      <h1 class="text-2xl">studio production</h1>
+      <p class="font-two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, dolorum.</p>
+    </div>
+    <div class="border border-black p-10 rounded-sm">
+      <img class="w-10 mx-auto my-4" src="images/icons/theater.png" alt="">
+      <h1 class="text-2xl">dream Moive</h1>
+      <p class="font-two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, dolorum.</p>
+    </div>
+    <div class="border border-black p-10 rounded-sm">
+      <img class="w-10 mx-auto my-4" src="images/icons/rim.png" alt="">
+      <h1 class="text-2xl">Polling problem</h1>
+      <p class="font-two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, dolorum.</p>
+    </div>
+    <div class="border border-black p-10 rounded-sm">
+      <img class="w-10 mx-auto my-4" src="images/icons/film.png" alt="">
+      <h1 class="text-2xl">movie production</h1>
+      <p class="font-two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, dolorum.</p>
+    </div>
+    <div class="border border-black p-10 rounded-sm">
+      <img class="w-10 mx-auto my-4" src="images/icons/count-down.png" alt="">
+      <h1 class="text-2xl">actor action</h1>
+      <p class="font-two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, dolorum.</p>
+    </div>
+
+  </div>
+</div>
+
+
+
+
 
 
 
