--- a/index.html
+++ b/index.html
@@ -172,7 +172,18 @@
 </div>
 
 
+<!-- footer section start -->
 
+<footer class="bg-black text-white">
+  <div class="container py-10 text-center">
+    <h1 class="text-4xl font-one">MD MohaiMinur Rahaman Mukta</h1>
+    <h4 class="text-2xl font-two">Best Level Experience</h4>
+    <p class="font-two w-1/3 mx-auto opacity-70 my-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, totam.</p>
+
+    <p class="font-two mt-10 opacity-50">Copyright @2023 MD MohaiMinur Rahaman Mukta, All right reserved by MohaiMinur</p>
+
+  </div>
+</footer>
 
 
 
