--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <button class="px-5 py-3 border border-white rounded-md">See more movies</button>
     </div>
 
-      <div class="grid grid-cols-1 lg:grid-cols-4 justify-center gap-8 my-10">
+      <div class="grid grid-cols-1 lg:grid-cols-4 justify-center mx-auto gap-8 my-10">
         <img class="border border-white p-5 rounded-md h-full" src="images/tenet.jpg" alt="">
         <img class="border border-white p-5 rounded-md h-full" src="images/interstellar.jpg" alt="">
         <img class="border border-white p-5 rounded-md h-full" src="images/inception.jpg" alt="">
